# LiBraryManagementSystem

./: CMakeLists.txt  Makefile  report.tex
app/: main_admin.cpp  main_user.cpp
data/: books.csv  borrows.csv  users.csv
include/models/: Book.h  BorrowRecord.h  User.h
include/repositories/: Bookrepository.h  BorrowRepository.h  IBookRepository.h  IBorrowRepository.h  IUserRepository.h  UserRepository.h
include/services/: LibraryService.h
include/ui/: AdminUI.h  UserUI.h
src/models/: Book.cpp  BorrowRecord.cpp  User.cpp
src/repositories/: BookRepository.cpp  BorrowRepository.cpp  UserRepository.cpp
src/services/: LibraryService.cpp
src/ui/: AdminUI.cpp  UserUI.cpp
tests/: LibraryServiceTest.cpp  RepositoryTest.cpp
